--- a/Sobre Nos/index.html
+++ b/Sobre Nos/index.html
@@ -22,7 +22,7 @@
   <header>
     <nav>
       <a href="..\index.html">
-        <img src="..\assets/logo.png" alt="logo">
+        <img src="..\assets/logo.jpeg" alt="logo">
       </a>
       <ul class="navegador">
         <a href="..\index.html" class="btn">Download</a>
@@ -36,7 +36,7 @@
    <section class="mages">
     <div class="equipe">
       <div class="mages-img">
-        <img src="/assets/threemageslogo.png" alt="">
+        <img src="/assets/threemageslogo.jpeg" alt="">
       </div>
       
       <div class="mages-text">
