--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header>
     <nav>
       <a href="index.html">
-        <img src="assets/logo.png" alt="logo">
+        <img src="assets/logo.jpeg" alt="logo">
       </a>
       <ul class="navegador">
         <a href="index.html" class="btn">Download</a>
@@ -43,7 +43,7 @@
       </div>
 
       <div class="download-img">
-        <img src="/assets/ilustmain.png" alt="">
+        <img src="/assets/ilustmain.jpeg" alt="">
       </div> 
 
     </div>
