--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="re-text">
         <h3>Purrinha Digital</h3>
         <div class="re-ilust">
-          <img src="../assets/vitrine_purrinha.jpeg" alt="">
+          <img src="./assets/vitrine_purrinha.jpeg" alt="">
           <p>
             "Purrinha Digital" é uma reimaginação moderna do tradicional jogo de bar "Purrinha" ou "Jogo do Palito", onde você joga contra a máquina. O objetivo do jogo permanece simples: adivinhar o número total de palitos que estarão nas mãos virtuais depois que todos revelarem suas escolhas. A versão digital traz uma nova camada de desafio, permitindo que os jogadores compitam contra um oponente infalível a qualquer hora. Mantendo a essência e a diversão do jogo original, "Purrinha Digital" é ideal tanto para os veteranos das mesas de bar quanto para novos jogadores em busca de um passatempo divertido e envolvente. Com sua interface amigável e acessível, ele promete tornar o clássico ainda mais acessível e emocionante na era digital.
           </p>
